Closed Bug 570347 Opened 14 years ago Closed 14 years ago

Core Animation Rendering Glitch

Categories

(Core Graveyard :: Plug-ins, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: BenWa, Assigned: BenWa)

Details

Attachments

(1 file)

Some Flash videos show rendering glitches. Particularly with the YouTube video interface. For example the following video has the playback bar and start/stop jump a few pixels while the video is playing:
http://www.youtube.com/watch?v=_i2RCBa3l-g
This patch limits the drawing width/height to be strictly within the dimensions of the IOSurface. This fixes the rendering glitches.
Attachment #449472 - Flags: review?(joshmoz)
Comment on attachment 449472 [details] [diff] [review]
Limit drawing operations to the width/height of the IOSurface

Prefix "CGContextDrawImage" with "::".
Attachment #449472 - Flags: review?(joshmoz) → review+
Pushed to mozilla-central:
http://hg.mozilla.org/mozilla-central/rev/86cdcd6616de
Assignee: nobody → b56girard
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: