Limit drawing operations to the width/height of the IOSurface. b=570347 r=josh